<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisclaimerPopUp">

    <TextView
        android:id="@+id/disclaimerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/disclaimer_top_margin"
        android:text="@string/disclaimer"
        android:textStyle="bold"
        android:textSize="@dimen/intro_text_size"
        android:textColor="@color/darkTurquoise" />

    <TextView
        android:id="@+id/disclaimerTxtTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/disclaimerTextView"
        android:layout_marginTop="@dimen/disclaimer_text_top_margin"
        android:layout_marginLeft="@dimen/disclaimer_text_horizontal_margin"
        android:layout_marginRight="@dimen/disclaimer_text_horizontal_margin"
        android:text="@string/disclaimer_text"
        android:textSize="@dimen/disclaimer_text_size"
        android:textColor="@color/darkgray" />

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/disclaimerCheckBox"
        android:layout_marginBottom="@dimen/accept_btn_bottom_margin" />

    <CheckBox
        android:id="@+id/disclaimerCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/check_box_bottom_margin"
        android:text="@string/disclaimer_check_box"
        android:textColor="@color/navy"/>

</RelativeLayout>