<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/how"
        android:textSize="@dimen/intro_text_size"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/how_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/swipeTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginLeft="@dimen/swipe_text_margin"
        android:layout_marginStart="@dimen/swipe_text_margin"
        android:layout_marginBottom="@dimen/swipe_text_margin"
        android:text="@string/swipe_to_previous"
        android:textSize="20sp"/>

</FrameLayout>