<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:id="@+id/scrollViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resultsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/survey_statement_top_margin"
                android:layout_gravity="center"
                android:textSize="@dimen/intro_text_size"
                android:text="@string/results" />

            <com.github.mikephil.charting.charts.RadarChart
                android:id="@+id/radarChart"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/table_top_margin"
                android:layout_marginBottom="30dp">

                <TableRow
                    android:id="@+id/headerRow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/header_row_vertical_margin"
                    android:layout_marginTop="@dimen/header_row_vertical_margin">

                    <TextView
                        android:id="@+id/valueDimensionColumn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/personalScoreColumn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/column_spacing_margin"
                        android:layout_marginStart="@dimen/column_spacing_margin"
                        android:gravity="center"
                        android:text="@string/table_header_personal_score"
                        android:textSize="@dimen/text_size"/>

                    <TextView
                        android:id="@+id/employerScoreColumn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/column_spacing_margin"
                        android:layout_marginStart="@dimen/column_spacing_margin"
                        android:gravity="center"
                        android:text="@string/table_header_employer_score"
                        android:textSize="@dimen/text_size"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>