<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/survey_horizontal_margin"
        android:layout_marginStart="@dimen/survey_horizontal_margin"
        android:layout_marginTop="@dimen/survey_vertical_margin"
        android:text="id"
        android:textSize="@dimen/survey_text_size"/>

    <TextView
        android:id="@+id/valueTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/idTextView"
        android:layout_toEndOf="@+id/idTextView"
        android:layout_toRightOf="@id/idTextView"
        android:layout_marginRight="@dimen/survey_horizontal_margin"
        android:layout_marginEnd="@dimen/survey_horizontal_margin"
        android:text="value"
        android:textSize="@dimen/survey_text_size" />

    <RadioGroup
        android:id="@+id/rankRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/valueTextView"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_horizontal_margin"
            android:layout_marginRight="@dimen/radio_horizontal_margin"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_horizontal_margin"
            android:layout_marginRight="@dimen/radio_horizontal_margin"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_horizontal_margin"
            android:layout_marginRight="@dimen/radio_horizontal_margin"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_horizontal_margin"
            android:layout_marginRight="@dimen/radio_horizontal_margin"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_horizontal_margin"
            android:layout_marginRight="@dimen/radio_horizontal_margin"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_horizontal_margin"
            android:layout_marginRight="@dimen/radio_horizontal_margin"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radio6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radio_horizontal_margin"
            android:layout_marginRight="@dimen/radio_horizontal_margin"
            android:checked="false" />

    </RadioGroup>

    <TextView
        android:id="@+id/notImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rankRadioGroup"
        android:layout_toLeftOf="@id/important"
        android:layout_toStartOf="@id/important"
        android:layout_marginRight="@dimen/imp_lbl_horizontal_margin"
        android:layout_marginEnd="@dimen/imp_lbl_horizontal_margin"
        android:layout_marginBottom="@dimen/imp_lbl_bottom_margin"
        android:text="@string/not_important"
        android:textSize="@dimen/imp_lbl_txt_size"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rankRadioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/imp_lbl_bottom_margin"
        android:text="@string/important"
        android:textSize="@dimen/imp_lbl_txt_size" />

    <TextView
        android:id="@+id/veryImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rankRadioGroup"
        android:layout_toRightOf="@id/important"
        android:layout_toEndOf="@id/important"
        android:layout_marginLeft="@dimen/imp_lbl_horizontal_margin"
        android:layout_marginStart="@dimen/imp_lbl_horizontal_margin"
        android:layout_marginBottom="@dimen/imp_lbl_bottom_margin"
        android:text="@string/very_important"
        android:textSize="@dimen/imp_lbl_txt_size"
        android:textAlignment="center"/>

</RelativeLayout>